Fix CSS spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,142 +1,162 @@
 /**** general styling ****/
 
 html, body {
-	height:100%;
+  height: 100%;
 }
 
 body {
-		background-size: 100% 100%;
-		background-repeat: no-repeat;
-		-webkit-transition: background 1s linear;
-    -moz-transition: background 1s linear;
-    -o-transition: background 1s linear;
-		transition: background 1s linear;
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    font-weight: 300;
-    color: #888;
-    line-height: 30px;
-    text-align: center;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  -webkit-transition: background 1s linear;
+  -moz-transition: background 1s linear;
+  -o-transition: background 1s linear;
+  transition: background 1s linear;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  font-weight: 300;
+  color: #888;
+  line-height: 30px;
+  text-align: center;
 }
 
 img {
-	max-width: 100%;
+  max-width: 100%;
 }
 
 .container-fluid {
-	float: none;
-	margin: 0 auto;
+  float: none;
+  margin: 0 auto;
 }
 
 .inner {
-	height: 100%;
-	display: table-cell;
-	vertical-align: middle;
+  height: 100%;
+  display: table-cell;
+  vertical-align: middle;
 }
 
 .inner {
-    padding: 40px 0 170px 0;
+  padding: 40px 0 170px 0;
 }
 
 .content {
-	height: 100%;
-	width: 100%;
-	display: table;
-	padding: 0;
+  height: 100%;
+  width: 100%;
+  display: table;
+  padding: 0;
 }
 
 .content .text {
-	color: #000;
+  color: #000;
 }
 
 .content .info {
-	margin: 20px 0 10px 0;
+  margin: 20px 0 10px 0;
 }
 
 .content .info h1 {
-	opacity: 0.8;
+  opacity: 0.8;
 }
 
 .form-box {
-	padding-top: 40px;
+  padding-top: 40px;
 }
 
 .form-field {
-	padding: 25px;
-	background: #eee;
-	-moz-border-radius: 0 0 4px 4px; -webkit-border-radius: 0 0 4px 4px; border-radius: 0 0 4px 4px;
-	text-align: left;
+  padding: 25px;
+  background: #eee;
+  -moz-border-radius: 0 0 4px 4px; -webkit-border-radius: 0 0 4px 4px; border-radius: 0 0 4px 4px;
+  text-align: left;
 }
 
 form .form-field {
-	height: 210px;
+  height: 210px;
 }
 
 form .form-field button.btn {
-	min-width: 100px;
+  min-width: 100px;
 }
 
 form .form-field .input-error {
-	border-color: #f00;
+  border-color: #f00;
 }
 
 form.registration-form fieldset {
-	display: none;
+  display: none;
 }
 
 /**** form elements ****/
 
-button.btn:hover { opacity: 0.6; color: #fff; }
+button.btn:hover {
+  opacity: 0.6;
+  color: #fff;
+}
 
-button.btn:active { outline: 0; opacity: 0.6; color: #fff; -moz-box-shadow: none; -webkit-box-shadow: none; box-shadow: none; }
+button.btn:active {
+  outline: 0;
+  opacity: 0.6;
+  color: #fff;
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
 
-button.btn:focus { outline: 0; opacity: 0.6; background: #6495ed; color: #fff; }
+button.btn:focus {
+  outline: 0;
+  opacity: 0.6;
+  background: #6495ed;
+  color: #fff;
+}
 
-button.btn:active:focus, button.btn.active:focus { outline: 0; opacity: 0.6; background: #6495ed; color: #fff; }
+button.btn:active:focus, button.btn.active:focus {
+  outline: 0;
+  opacity: 0.6;
+  background: #6495ed;
+  color: #fff;
+}
 
 button.btn {
-	height: 50px;
-    margin: 0;
-    padding: 0 20px;
-    vertical-align: middle;
-    background: #6495ed;
-    border: 0;
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    font-weight: 300;
-    line-height: 50px;
-    color: #fff;
-    -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px;
-    text-shadow: none;
-    -moz-box-shadow: none; -webkit-box-shadow: none; box-shadow: none;
-    -o-transition: all .3s; -moz-transition: all .3s; -webkit-transition: all .3s; -ms-transition: all .3s; transition: all .3s;
+  height: 50px;
+  margin: 0;
+  padding: 0 20px;
+  vertical-align: middle;
+  background: #6495ed;
+  border: 0;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 50px;
+  color: #fff;
+  -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px;
+  text-shadow: none;
+  -moz-box-shadow: none; -webkit-box-shadow: none; box-shadow: none;
+  -o-transition: all .3s; -moz-transition: all .3s; -webkit-transition: all .3s; -ms-transition: all .3s; transition: all .3s;
 }
 
 
 input[type="text"],
 input[type="password"] {
-	height: 50px;
-    margin: 6px;
-    padding: 0 20px;
-    vertical-align: middle;
-    background: #f8f8f8;
-    border: 2px solid #ddd;
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    font-weight: 300;
-    line-height: 50px;
-    color: #888;
-    -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px;
-    -moz-box-shadow: none; -webkit-box-shadow: none; box-shadow: none;
-    -o-transition: all .3s; -moz-transition: all .3s; -webkit-transition: all .3s; -ms-transition: all .3s; transition: all .3s;
+  height: 50px;
+  margin: 6px;
+  padding: 0 20px;
+  vertical-align: middle;
+  background: #f8f8f8;
+  border: 2px solid #ddd;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 50px;
+  color: #888;
+  -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px;
+  -moz-box-shadow: none; -webkit-box-shadow: none; box-shadow: none;
+  -o-transition: all .3s; -moz-transition: all .3s; -webkit-transition: all .3s; -ms-transition: all .3s; transition: all .3s;
 }
 
 input[type="text"]:focus,
 input[type="password"]:focus {
-	outline: 0;
-	background: #fff;
-    border: 5px solid #ccc;
-    -moz-box-shadow: none; -webkit-box-shadow: none; box-shadow: none;
+  outline: 0;
+  background: #fff;
+  border: 5px solid #ccc;
+  -moz-box-shadow: none; -webkit-box-shadow: none; box-shadow: none;
 }
 
 /**** media queries ****/
@@ -147,11 +167,19 @@ input[type="password"]:focus {
 
 @media (max-width: 767px) {
 
-	.inner { padding: 35px 0 100px 0; }
-	.content { margin-top: 20px; }
+	.inner {
+		padding: 35px 0 100px 0;
+	}
+	.content {
+		margin-top: 20px;
+	}
 
-	.form-field { padding-bottom: 20px; }
-	form .form-field button.btn { margin-bottom: 5px; }
+	.form-field {
+		padding-bottom: 20px;
+	}
+	form .form-field button.btn {
+		margin-bottom: 5px;
+	}
 
 }
 
